fix issue where page text was visible under nav bar on mobile

--- a/src/components/nav/nav-small/nav-small.less
+++ b/src/components/nav/nav-small/nav-small.less
@@ -5,7 +5,7 @@
 
 .menu-small {
 	margin-top: @menu-margin-top;
-	top: @nav-bar-height;
+	padding-top: @nav-bar-height;
 	background-color: @background;
 	position: absolute;
 	height: ~'calc(100% - 50px)';
